[gd_scene load_steps=12 format=2]

[ext_resource path="res://assets/ui/shop.png" type="Texture" id=1]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor6.png" type="Texture" id=2]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor7.png" type="Texture" id=3]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor2.png" type="Texture" id=4]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor4.png" type="Texture" id=5]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor0.png" type="Texture" id=6]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor3.png" type="Texture" id=7]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor5.png" type="Texture" id=8]
[ext_resource path="res://assets/ui/cursors/sprite_ui_cursor1.png" type="Texture" id=9]
[ext_resource path="res://save/Shop.gd" type="Script" id=10]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 6 ), ExtResource( 9 ), ExtResource( 4 ), ExtResource( 7 ), ExtResource( 5 ), ExtResource( 8 ), ExtResource( 2 ), ExtResource( 3 ) ],
"loop": true,
"name": "default",
"speed": 12.0
} ]

[node name="Shop" type="Control"]
pause_mode = 2
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="Bg" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="Title" type="Label" parent="."]
margin_left = 59.0
margin_top = 27.0
margin_right = 97.0
margin_bottom = 41.0
text = "SHOP"

[node name="Prev" type="Label" parent="."]
margin_left = 51.0
margin_top = 159.0
margin_right = 103.0
margin_bottom = 173.0
text = "Y - Prev"

[node name="Next" type="Label" parent="."]
margin_left = 51.0
margin_top = 117.0
margin_right = 103.0
margin_bottom = 131.0
text = "X - Next"

[node name="Money" type="Label" parent="."]
margin_left = 19.0
margin_top = 52.0
margin_right = 133.0
margin_bottom = 66.0
text = "$ 0"

[node name="MainWindow" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0

[node name="SubTitle" type="Label" parent="MainWindow"]
margin_left = 151.0
margin_top = 14.0
margin_right = 263.0
margin_bottom = 28.0
text = "Primary Weapons"

[node name="Pos1" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 46 )

[node name="Opt1" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 41.0
margin_right = 257.0
margin_bottom = 55.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Atomic Ray"

[node name="Price1" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 41.0
margin_right = 312.0
margin_bottom = 55.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$50,000"

[node name="Pos2" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 66 )

[node name="Opt2" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 61.0
margin_right = 257.0
margin_bottom = 75.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Energy Ball"

[node name="Price2" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 61.0
margin_right = 312.0
margin_bottom = 75.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$10,000"

[node name="Pos3" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 86 )

[node name="Opt3" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 81.0
margin_right = 257.0
margin_bottom = 95.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Super Triple"

[node name="Price3" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 81.0
margin_right = 312.0
margin_bottom = 95.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$5,000"

[node name="Pos4" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 106 )

[node name="Opt4" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 101.0
margin_right = 257.0
margin_bottom = 115.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Super Laser"

[node name="Price4" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 101.0
margin_right = 312.0
margin_bottom = 115.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$1,000"

[node name="Pos5" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 126 )

[node name="Opt5" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 121.0
margin_right = 257.0
margin_bottom = 135.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Quad Laser"

[node name="Price5" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 121.0
margin_right = 312.0
margin_bottom = 135.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$800"

[node name="Pos6" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 146 )

[node name="Opt6" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 141.0
margin_right = 257.0
margin_bottom = 155.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Triple Laser"

[node name="Price6" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 141.0
margin_right = 312.0
margin_bottom = 155.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$500"

[node name="Pos7" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 166 )

[node name="Opt7" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 161.0
margin_right = 257.0
margin_bottom = 175.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Double Laser"

[node name="Price7" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 161.0
margin_right = 312.0
margin_bottom = 175.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$250"

[node name="Pos8" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 186 )

[node name="Opt8" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 181.0
margin_right = 257.0
margin_bottom = 195.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Default Laser"

[node name="Price8" type="Label" parent="MainWindow"]
margin_left = 260.0
margin_top = 181.0
margin_right = 312.0
margin_bottom = 195.0
grow_horizontal = 0
grow_vertical = 0
rect_scale = Vector2( 0.8, 0.8 )
text = "$100"

[node name="Pos9" type="Position2D" parent="MainWindow"]
position = Vector2( 160, 206 )

[node name="Exit" type="Label" parent="MainWindow"]
margin_left = 173.0
margin_top = 201.0
margin_right = 257.0
margin_bottom = 215.0
rect_scale = Vector2( 0.8, 0.8 )
text = "Exit"

[node name="Cursor" type="AnimatedSprite" parent="."]
position = Vector2( 160, 46 )
scale = Vector2( 1.2, 1.2 )
frames = SubResource( 1 )
